# dars

./: Cargo.toml  README.md
dars/: Cargo.toml
dars-macros/: Cargo.toml
dars-macros/src/: args.rs  lib.rs  model.rs  signature.rs  util.rs
dars/src/: image.rs  lib.rs  model.rs  module.rs  signature.rs
dars/src/adapter/: json.rs  mod.rs
dars/src/lm/: mod.rs  openai.rs
dars/src/module/: mod.rs  predict.rs
dars/tests/: model.rs  predict.rs  signature.rs
