[package]
name = "dars"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
dars-macros = { path = "../dars-macros" }
async-trait = { version = "0.1.89" }
thiserror = { version = "2.0.17" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
schemars = { version = "1.1" }
tokio = { version = "1.48.0", features = ["full"] }
