[package]
name = "da-rs"
authors = ["Marek Galovic <marek@topk.io>"]
description = "Declarative Agents in Rust"
keywords = ["declarative", "agents", "dspy"]
homepage = "https://github.com/topk-io/dars"
repository = "https://github.com/topk-io/dars"
license = "Apache-2.0"
readme = "README.md"
version = "0.1.1"
edition = "2024"
publish = true

[features]
default = ["openai"]
openai = ["async-openai"]

[dependencies]
dars-macros = { version = "0.1.0", path = "../dars-macros" }
async-trait = { version = "0.1" }
thiserror = { version = "2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
schemars = { version = "1.0" }
regex = { version = "1.12" }
# openai feature
async-openai = { version = "0.31", optional = true, features = [
    "_api",
    "chat-completion",
    "chat-completion-types",
] }

[dev-dependencies]
tokio = { version = "1.48", features = ["rt", "test-util"] }
